fix(grid): SKFP-858 fix mouseover cutoff

--- a/packages/ui/src/view/v2/GridCard/Gridcard.module.scss
+++ b/packages/ui/src/view/v2/GridCard/Gridcard.module.scss
@@ -49,6 +49,7 @@ $padding-side-and-bottom: 24px;
       }
       div[class$="-body"] {
         padding: 16px !important;
+        overflow: inherit;
       }
     }
 
